Added an interesting button.

--- a/www/index.html
+++ b/www/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <title>Document</title>
 </head>
 <body>
+    <p>Hello, World!</p>
+    <button id="say-hello-button">Say hello</button>
     <script src="script.js"></script>
 </body>
 </html>
